crates/analyzer/tests/snapshots/errors__binary_op_pow_int.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: The right hand side of the `**` operation must be unsigned
  ┌─ [snippet]:5:8
  │
5 │   a ** b
  │        ^ this has signed type `i256`


